# meetings

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pom.xml
api-gateway/: .dockerignore  Dockerfile  README.md  requirements-dev.txt  requirements.txt
app/: pom.xml
auth/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
auth/src/auth/: main.py  version.py
auth/src/auth/adapters/: __init__.py  db.py  repository.py
auth/src/auth/adapters/repositories/: pymongo_repository.py
auth/src/auth/app/: asgi.py  dependencies.py  router.py
auth/src/auth/app/settings/: application_settings.py  mongo_db_settings.py  uvicorn_settings.py
auth/src/auth/domain/: commands.py  events.py  mappers.py  models.py  schemas.py
auth/src/auth/entrypoints/: actuator.py
auth/src/auth/entrypoints/v1/: auth.py  users.py
auth/src/auth/service_layer/: __init__.py  auth.py  errors.py  jwt.py  password_encoder.py  register.py
auth/src/auth/utils/: formatters.py
auth/tests/: conftest.py  mocks.py
auth/tests/e2e/entrypoints/: test_actuator.py
auth/tests/e2e/entrypoints/v1/: test_auth.py  test_users.py
auth/tests/integration/service_layer/: test_auth.py  test_register.py
auth/tests/unit/adapters/: test_repository.py
auth/tests/unit/domain/: test_models.py
auth/tests/unit/service_layer/: test_jwt.py  test_password_encoder.py
etc/: dashboards.yaml
parent/: pom.xml
rest/: API.md  README.md  pom.xml
scheduler/: README.md  pom.xml
telegram-bot/: .dockerignore  Dockerfile  package-lock.json  package.json  readme.md  (+1 more)
(+272 files in other folders)
